k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api
          #image: k8slabzinab.azurecr.io/two-tier-api:1.0
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always

          ports:
            - containerPort: 5000
