k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  strategy: {type: Recreate}
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432

          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
